Fix loading for dark mode.

--- a/src/scss/loading.scss
+++ b/src/scss/loading.scss
@@ -27,7 +27,7 @@
     height: 75px;
     border-radius: 100%;
     // background-image: radial-gradient(white, white 60%, transparent 60%), conic-gradient(white, $blue);
-    background-image: conic-gradient(white, $blue);
+    background-image: conic-gradient($background, $blue);
     position: fixed;
     top: 0;
     bottom: 0;
@@ -50,7 +50,7 @@
     left: 0;
     right: 0;
     margin: auto;
-    background-color: white;
+    background-color: $background;
     border-radius: 100%;
     animation-name: loading-cover;
     animation-duration: 0.5s;
